--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
+    "@types/mongoose": "^5.11.96",
     "geist": "^1.5.1",
+    "mongoose": "^9.0.1",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
